--- a/source/style.css
+++ b/source/style.css
@@ -36,7 +36,7 @@ body
 
 header
 {
-	background: rgb(255, 255, 255);
+	background: rgba(255, 255, 255);
 	width: 70%;
 	margin: auto;
 	box-shadow: 5px 5px 5px black;
