--- a/source/style.css
+++ b/source/style.css
@@ -30,7 +30,7 @@
 
 body
 {
-	background-image:url("background.jpg");
+	background-image:url("images/background.jpg");
 	background-attachment: fixed;
 }
 
