--- a/source/stylePageAide.css
+++ b/source/stylePageAide.css
@@ -68,20 +68,18 @@ header
 }
 
 header p
- {
+{
     text-align:center;
- }
+    color:rgb(1, 70, 182);
+    font-family: comfortaa-regular, Arial, sans-serif;
+    font-size:1.5em;
+}
 
- header .logo
- {
+header .logo
+{
     border-radius: 20px;
     width:20%;
- }
-
- header .liste
- {
-    width:18%;
- }
+}
 
  .elementHeader:nth-child(1)
  {
@@ -119,40 +117,70 @@ section
 
 @media all and (max-device-width: 480px) /* Pour les mobiles */
 {
-  section
-  {
-    width: 90%;
-  }
- }
+    section
+    {
+        width: 90%;
+    }
+}
 
- .h1
- {
-     color: rgb(1, 70, 182);
-     font-family: comfortaa-bold, Arial, sans-serif;
-     text-align:center;
-     font-size:3em;
-     text-decoration: underline;
- }
+h1
+{
+    color: rgb(1, 61, 156);
+    font-family: comfortaa-bold, Arial, sans-serif;
+    font-size:3em;
+    text-decoration: underline;
+}
 
- p
- {
-     color:rgb(1, 70, 182);
-     font-family: comfortaa-regular, Arial, sans-serif;
-     font-size:1.5em;
- }
+h2
+{
+    color: rgb(1, 98, 253);
+    font-family: comfortaa-regular, Arial, sans-serif;
+    font-size:2em;
+}
 
- p strong
- {
-    color:rgb(98, 180, 228);
+h3 strong
+{
+    text-decoration: underline;
+    font-weight: normal;
+}
+
+h3
+{
+    color: rgb(1, 98, 253);
     font-family: comfortaa-regular, Arial, sans-serif;
     font-size:1em;
-    font-weight: normal;
- }
+}
 
- p a 
- {
+#projet, #securite, #utilisation, #erreur, #aPropos
+{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.lienAide
+{
+    color: rgb(43, 116, 235);
     font-family: comfortaa-light, Arial, sans-serif;
- }
+}
+
+section p
+{
+    font-size:2em;
+    text-align: center;
+}
+
+
+#projet img, #securite img, #utilisation img, #erreur img, #aPropos img
+{
+    width:20%;
+}
+
+.projetElement, .securiteElement, .utilisationElement, .erreurElement, .aProposElement
+{
+    width:30%;
+    margin: 10px 10px 10px 10px;
+}
 
  .pdp
  {
@@ -210,170 +238,35 @@ footer p a
 }
 
 /*
-//      Section pour la liste adhérent
+//
+//                  POUR L'AFFICHAGE DE L'AIDE 
 //
 //
-//
-//
+//                      afficheAide.php
 */
 
-.lien
+#titreAide
 {
-    color:blue;
-    font-family: comfortaa-regular, Arial, sans-serif;
-    font-size:1.5em;
-}
-
-#li
-{
-    display:flex;
-}
-
-.liElement
-{
-    flex:1;
-}
-
-.classe
-{
-    color:rgb(0, 0, 184);
-    font-family: comfortaa-regular, Arial, sans-serif;
-    font-size:1.5em;
-}
-
-.statut
-{
-    color:rgb(145, 145, 153);
-    font-family: comfortaa-regular, Arial, sans-serif;
-    font-size:1.5em;
-}
-
-.searchBar
-{
-    color:blue;
-    font-family: comfortaa-regular, Arial, sans-serif;
-    font-size:0.5em;
-    width : 200px;
-    height : 20px;
-    margin-left:5px;
-    border-radius: 10px;
-}
-
-#topBar
-{
-    display:flex;
-    justify-content: space-around;
-}
-
-#topBar:nth-child(2) p a
-{
-    color:green;
-}
-
-
-/*
-//
-//
-// POUR LA FICHE ADHÉRENT D'UN AUTRE ADHÉRENT
-//
-//
-*/
-
-#codeButton
-{
-	display: flex;
-}
-
-.codeButtonElement
-{
-	flex:1;
-}
-
-.info
-{
-    color:gray;
-}
-
-.pointFidelite
-{
-    border: 1px solid rgb(98, 180, 228);
-  	border-radius: 20px;
-  	height:30px;
-  	width:200px;
-  	font-family: comfortaa-bold, Arial, sans-serif;
-	color:rgb(98, 180, 228);
-	font-size:1em;
-	margin: auto;
-}
-
-.modification
-{
-    font-family: comfortaa-bold, Arial, sans-serif;
-    color :rgb(98, 180, 228);
-    text-align:center;
-}
-
-
-/*
-//
-//
-//  MODIFICATIONS OU AJOUT D'UN ADHÉRENT (adherentInformations.php)
-//
-//
-*/
-
-.formulaire
-{
-    border-radius: 20px;
-    border-width:3px;
-    border-color:rgb(98, 180, 228);
-    font-family: comfortaa-light, Arial, sans-serif;
-    font-size:1em;
-    color:blue;
-}
-
-.validerFormulaire
-{
-    border-radius: 20px;
-    border-width:3px;
-    border-color:green;
-    font-family: comfortaa-light, Arial, sans-serif;
-    font-size:1em;
-    color:blue;
-}
-
-.titreModification
-{
-    
-    color: blue;
-    font-family: comfortaa-bold, Arial, sans-serif;
-    text-align:center;
-    font-size:3em;
+    text-align: center;
+    color:rgb(0, 54, 231);
+    size: 4em;
     text-decoration: underline;
 }
 
-.deleteButton
+#imageAide img
 {
-    text-align:center;
-    font-family: comfortaa-bold, Arial, sans-serif;
-    font-weight: bold;
+    width:30%;
 }
 
-.deleteButton a
+#imageAide
 {
-    color:red;
+    text-align: center;
 }
 
-.error
+#descriptionAide
 {
-    color: rgb(235, 3, 53);
-    font-family: comfortaa-bold, Arial, sans-serif;
-    text-align:center;
-    font-size:1.9em;
-}
-
-#choixSuppression
-{
-    display:flex;
-    justify-content: space-around;
+    text-align:left;
+    color: rgb(1, 98, 253);
+    font-family: comfortaa-regular, Arial, sans-serif;
+    font-size:2em;
 }
